*
* 2.0-M1
*

- New hook script "AcceptNewNode" (can be used as additional filter for network discovery to avoid unnecessary communications)
- SMS driver for Kannel gateway
- Oracle subagent: added parameter Oracle.CriticalStats.Deadlocks
- Reporting server improved
- Code page option added to all client command line tools (nxalarm, nxevent, nxpush, nxsms)
- Management console:
    - New dashboard element "DCI summary table"
- Fixed issues: #667, #675


*
* 1.2.17
*

- New DCI source: NXSL script executed on server
- Configurable node matching policy for built-in syslog server (controlled by SyslogNodeMatchingPolicy configuration parameter)
- Oracle monitoring subagent improved (bugs fixed, new metrics)
- nxalarm tool supports commands add-comment and get-comments
- Source port number added to events generated from SNMP trap (available via "sourcePort" named parameter)
- Jira link: added possibility to set project's component for issues being created
- ICMP proxy can be set for nodes
- New methods in NXSL classes Node, Interface, and NetObj: setStatusCalculation and setStatusPropagation
- New attributes "slot" and "port" in NXSL class Interface
- Can execute arbitrary NXSL script in context of node, cluster, subnet, or container object from management console
- Improved network topology changes detection
- Added driver for H3C switches
- Management console:
    - Can show alarms for multiple selected objects
    - Fixed non-working ordering in event list in alarm details view
    - Fixed bug with LDAP user system rights
    - Added default search string for LDAP to select all objects: "(objectClass=*)"
    - Added device geolocation tracking and display on map
    - Filter in event processing policy editor
    - Fixed bug with deletion of subnet with corrected IP
    - Added command line option to open specific dashboard after login
- Android console:
	- Fixed issue #661
	- Added node boot time to overview tab
	- Fix bug in notifying connection point not found